# pycompactor

./: pyproject.toml  tox.ini
.github/workflows/: release_test.yaml
corpus_test/: generate_results.py
docs/source/: conf.py
hypo_test/: test_it.py
src/pycompactor/: __init__.py  __main__.py  ast_compare.py  ast_printer.py  expression_printer.py  f_string.py
src/python_minifier/: __init__.py
test/: test_combine_imports.py  test_folding.py  test_generic_types.py  test_hoist_literals.py  test_map_names.py  test_match_rename.py  test_remove_annotations.py  test_remove_assert.py  test_remove_debug.py  test_remove_exception_brackets.py  test_remove_explicit_return_none.py  test_remove_literal_statements.py  test_remove_pass.py  test_rename_builtins.py  test_rename_locals.py  test_utf8.py
tests/: test_assignment_expressions.py  test_await_fstring.py  test_combine_imports.py  test_comprehension_rename.py  test_decorator_expressions.py  test_dict_expansion.py  test_empty_fstring.py  test_folding.py  test_hoist_literals.py  test_import.py  test_iterable_unpacking.py  test_match.py  test_match_rename.py  test_name_generator.py  test_nonlocal.py  test_posargs.py  test_preserve_shebang.py  test_remove_annotations.py  test_remove_assert.py  test_remove_debug.py  test_remove_exception_brackets.py  test_remove_explicit_return_none.py  test_remove_literal_statements.py  test_remove_object.py  test_remove_pass.py  test_rename_builtins.py  test_rename_locals.py  test_slice.py
typing_test/: test_badtyping.py  test_typing.py
xtest/: test_regrtest.py  test_unparse_env.py
(+38 files in other folders)
